<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/street_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:ellipsize="end"
            android:hint="@string/street_number"
            android:inputType="number"
            android:nextFocusForward="@+id/street_name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/street_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:ellipsize="end"
            android:hint="@string/street_name"
            android:nextFocusForward="@+id/postal_code"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/postal_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:ellipsize="end"
            android:hint="@string/postal_code"
            android:inputType="number"
            android:nextFocusForward="@+id/town"
            android:singleLine="true" />

        <EditText
            android:id="@+id/town"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ellipsize="end"
            android:hint="@string/town"
            android:nextFocusForward="@+id/comment"
            android:singleLine="true" />

    </LinearLayout>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:hint="@string/comment"
        android:maxLines="2" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
